feat: Override MCP server at runtime
